tests/negative/comptime_if_runtime_condition.ora
contract ComptimeIfRuntimeCondition {
    pub fn run(input: u256) -> u256 {
        var total: u256 = 0;
        comptime {
            if (input > 0) {
                total = 1;
            }
        }
        return total;
    }
}
